Bug 263118 - Quicksearch in threads prevents me to go back to message list
Summary: Quicksearch in threads prevents me to go back to message list
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 263128 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-14 11:02 UTC by Bjoern Ricks
Modified: 2011-02-16 19:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2011-01-14 11:02:17 UTC
Steps to reproduce:
1) Open a thread
2) Insert some search string that doesn't occur in a mail subject ins this thead
3) Remove the search string
4) Click on Back to Threads

Result:
The "Back to Threads" button doesn't work and the message list isn't shown.

Same behavior can be found on maemo
Comment 1 Tobias Koenig 2011-01-17 14:10:48 UTC
*** Bug 263128 has been marked as a duplicate of this bug. ***
Comment 2 Tobias Koenig 2011-01-31 15:22:05 UTC
Git commit 15d1d323e434ce143c9aaaf82b1017b5d8828f18 by Tobias Koenig.
Pushed by tokoe into branch 'master'.

Disable the quick search in thread content view

As long as the thread content view does not have its
own quick search line edit, we disable the one from the
message list if we are in thread content view. Otherwise
the filter will act on the message list, clears the current
selection and a click on 'Back to Message List' won't have
any effect because the call to clearSelection() does not emit
any selectionChanged signal if the selection is empty already.

BUG: 263118

M  +6    -0    mobile/lib/kdeclarativemainview.cpp     
M  +6    -0    mobile/lib/kdeclarativemainview.h     
M  +5    -0    mobile/mail/mainview.cpp     
M  +2    -0    mobile/mail/mainview.h     

http://commits.kde.org/ee6cc38b/15d1d323e434ce143c9aaaf82b1017b5d8828f18
Comment 3 Bjoern Ricks 2011-02-16 11:05:49 UTC
Quicksearch is deactivated in thread view