Disable the quick search in thread content view

As long as the thread content view does not have its
own quick search line edit, we disable the one from the
message list if we are in thread content view. Otherwise
the filter will act on the message list, clears the current
selection and a click on 'Back to Message List' won't have
any effect because the call to clearSelection() does not emit
any selectionChanged signal if the selection is empty already.

BUG: 263118